Addde spatie/laravel-cors library. Created registration and logout
